components/BeingAtTorchbox/LifeAsATorchboxer/LifeAsATorchboxer.module.scss
.container {
    margin: $grid * 2 8.33vw;
    display: flex;
    flex-direction: column;

    @include media-query(large) {
        margin: $grid * 4 8.33vw;
        flex-direction: row;
    }
}

.textContainer {
    text-align: left;
    margin-bottom: $grid;
    order: 1;

    @include media-query(medium) {
        order: 2;
    }

    @include media-query(large) {
        max-width: 635px;
        margin-bottom: 0;
    }
}

.title {
    @include font-size(xxxxl);
    font-weight: $weight--extrabold;
    line-height: 60px;
    word-wrap: break-word;
    hyphens: manual;

    @include media-query(medium) {
        line-height: 70px;
    }

    @include media-query(large) {
        line-height: 100px;
    }

    &Accent {
        color: var(--color--coral);
    }
}

.richText {
    & p:last-child {
        margin-bottom: 0;
    }
}

.links {
    @include font-size(m);
    display: flex;
    flex-direction: column;
    gap: $grid;
    margin-top: $grid;

    & a {
        width: max-content;
    }

    @include media-query(medium) {
        display: block;
        margin-top: $grid * 1.5;

        & a:first-child {
            margin-right: $grid * 2;
        }
    }
}

.image {
    display: none;

    @include media-query(large) {
        order: 1;
        display: block;
        margin: auto $grid * 2 0 auto;
        transform: rotate(0deg);
    }
}

